--- a/StaticContent/京东云刊/京东云刊.html
+++ b/StaticContent/京东云刊/京东云刊.html
@@ -109,7 +109,7 @@
         </div>
         <div class="col-6 txt-box">
          <p class="txt">
-          News of victory are spreading rapidly, JD Cloud won two awards of Cloud Ding, and set up the first poverty alleviation and unbounded retail flash shop in Xi’an, and signed the contract with Shiyan City to undertake government affairs cloud and other related business, and also launched a number of cloud services cooperation with Eerduosi.
+          News of victory are spreading rapidly, JD Cloud won two awards of JD YunDing, and set up the first poverty alleviation and unbounded retail flash shop in Xi’an, and signed the contract with Shiyan City to undertake government affairs cloud and other related business, and also launched a number of cloud services cooperation with Eerduosi.
          </p>
          <a class="jdc-btn jdc-bg" clstag="News|keycount|MiddleContentSec|news_journal_2" href="//www.jdcloud.com/news/journalJun">
           View Now
