--- a/StaticContent/京东云刊6月/京东云刊6月.html
+++ b/StaticContent/京东云刊6月/京东云刊6月.html
@@ -67,7 +67,7 @@
          JD Cloud Won Two Top Prizes at the Cloud Connect
         </div>
         <div class="txt">
-         The 6th Cloud Connect China 2018·was held at the Shanghai International Convention Center. Shen Yuanqing, president of JD Cloud Division, won the "Most Influential People Award of China in 2017-2018". Under his leadership, JD Cloud with strong technical strength and innovative ability, won the "2017-2018 China's Most Promising Enterprise Awards" and the "Cloud Ding Award".
+         The 6th Cloud Connect China 2018·was held at the Shanghai International Convention Center. Shen Yuanqing, president of JD Cloud Division, won the "Most Influential People Award of China in 2017-2018". Under his leadership, JD Cloud with strong technical strength and innovative ability, won the "2017-2018 China's Most Promising Enterprise Awards" and the "JD YunDing Award".
         </div>
         <a class="more" clstag="News|keycount|MiddleContentSec|news_journalJun_1" href="https://www.jdcloud.com/news/detail/93">
          View More &gt;
