--- a/StaticContent/京东云刊订阅申请成功页/京东云刊订阅申请成功页.html
+++ b/StaticContent/京东云刊订阅申请成功页/京东云刊订阅申请成功页.html
@@ -114,7 +114,7 @@
             Smart City Newsflash | Issue 2
            </h5>
            <p class="txt">
-            Triumphant news keeps pouring in, and JD Cloud won two awards of "Cloud Ding Award"
+            Triumphant news keeps pouring in, and JD Cloud won two awards of "JD YunDing Award"
            </p>
           </div>
          </a>
