--- a/StaticContent/免费试用/免费试用.html
+++ b/StaticContent/免费试用/免费试用.html
@@ -724,7 +724,7 @@
       <br/>
       4) After the enterprise user successfully receives the package, the package is limited to the trial of the enterprise. It is forbidden to resell the package. Once found, JD Cloud has the right to take back the free package use qualification and ban the account;
       <br/>
-      5) Cloud Ding users and channel accounts are not allowed to participate in this activity;
+      5) JD YunDing users and channel accounts are not allowed to participate in this activity;
       <br/>
       6) JD Cloud has the right to take back the free package use qualification of users who have engaged in the malicious grab of activity resources and engaged in illegal actions by using resources;
       <br/>
@@ -779,7 +779,7 @@
       <br/>
       2) The user with the same personal real-name verification user can only use one JD account to receive the free package;
       <br/>
-      3) Cloud Ding users and channel accounts are not allowed to participate in this activity;
+      3) JD YunDing users and channel accounts are not allowed to participate in this activity;
       <br/>
       4) JD Cloud has the right to take back the free package use qualification of users who have engaged in the malicious grab of activity resources and engaged in illegal actions by using resources;
       <br/>
