--- a/StaticContent/关于我们/关于我们.html
+++ b/StaticContent/关于我们/关于我们.html
@@ -299,7 +299,7 @@
          05.11
         </span>
         <span>
-         Awarded with the Cloud Ding Award and the China's Most Promising Enterprise Award. Moreover, Samuel Shen, President of JD Cloud Business Unit, won the Most China's Influential People Award.
+         Awarded with the JD YunDing Award and the China's Most Promising Enterprise Award. Moreover, Samuel Shen, President of JD Cloud Business Unit, won the Most China's Influential People Award.
         </span>
        </p>
        <p>
