--- a/StaticContent/网站搭建/网站搭建.html
+++ b/StaticContent/网站搭建/网站搭建.html
@@ -573,7 +573,7 @@
       <br/>
       6. JD No.1 Cloud Server does not support the use of coupons;
       <br/>
-      7. Cloud Ding users, channels and agents are not allowed to participate in this activity;
+      7. JD YunDing users, channels and agents are not allowed to participate in this activity;
       <br/>
       8. Please call JD Cloud Customer Service at 4006151212 (7*24h) if you have any question.
       <br/>
